--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,7 @@ body {
   padding-top: env(safe-area-inset-top);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  font-family: "Prompt", "Prompt Fallback" !important;
 }
 
 .ios-header {
